--- a/LocalEditor/FrmMain.resx
+++ b/LocalEditor/FrmMain.resx
@@ -124,67 +124,67 @@
   <data name="BtnOpenOriginal.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJcSURBVDhPhZBNaxNRFIYH/4fiykVrlBKSorgSpOAmEQSp
-        UEUrgtiFVDeuxEXTuKmkiRZKUAttVCy4aBYKbqQQCrFJNKlJJk1sQhry0XSS+Z7JZF7vTD5MQeNhHriX
-        ue9zz7nUkDpBsBHsXcYH1icJxwhDy1ar1RRN0zCILMvwer0e8v+/ErsRkCQJHMeBYRhUq1VTIooilpaW
-        epJ/likwbjQCLMuCdHSkG+NM5+jfyxS0Wi1TIgiCKanX6/1OjDPUz6A1lt9wqIXglQGc6pp7pNi7qScx
-        OumN0xeEV+2yrrcB6OQz6KxDm5/6rfYkiqKYEp7n/wgSH20NXZMgFxcg5DwQ9l5DzK9jK/TliMBAVVVT
-        YjxsX0AHxlhNaYDPesFlFnG4/QjFoBM7y+eRXbmE3TcXkfFfIJB94DKyaxPYC04OCD7Y1JZYBpPw4TDi
-        RuXrQygNGgLPkVGMqfQ+vfr13jnYwbhqzt+WCSKgCdA1DmzyFoTMXQj09AC3TVHuncN4B44IrBTtsyu6
-        JkJjt9BiPkM9WIdS9qMWv49SZBrlyE3CFOE6St+ugTkoYtNl1c0wRR2nwst2ua2yUOsbUCqrkEsvIBXm
-        IOzOkBvvQEjfAJ+aBJ+8Cm7HgbZSAe23qSTcqejzs5KuMiS8AnnfAyn/FGJu1mzZDMUnwMbOobl9Bo3w
-        KTJpHrTPpnTjFJV+ZimJjURjP/K2zWdegaNfgkstgEu6wCaegI0/RvPHLJqxGTSj91ArhPT04hjbjVNU
-        yjX6IOU+HUjMj1Sjbos0lHmL9N1taabmRr2dNEX9BlOHiyeORaYUAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJcSURBVDhPhZBLaxNRGIYH/4fiykVrlBKSorgSpODCZCFI
+        hSpaEcQupLpxJS7Sxk0lTTRQglq0UbEg2CwU3KhYSjUXTWqSSRObEkMuTSeZ+0wm83pmcjEFjR/zwDnM
+        eZ/zfYcaUAcINoK9w2jf+iBhH2Fg2SqViqJpGvqRZRler9dD/v9XYjcCkiSB4zgwDAMiNCWiKMLv93cl
+        /yxTYNxoBFiWRbVa3dONcaZ99O9lCprNpikRBMGU1Gq1XifGGepHyBrLvzmjbq84+3CoS+6hQvemrsTo
+        pDtOT7D+1C7reguATj6D9nr109teq12JoiimhOf5P4LEa1td1yTIhTkIOQ+ErccQ88tYW32/R2Cgqqop
+        MR62J6CDI6ym1MFnveAy89gN30Ih5MTGwnFkF09h88lJZAInCGQfPI3s0hi2QuN9glc2tSmWwCR82I24
+        Uf5wE0qdhsBzZBRjKr1Ht36+dPZ3MKqa87dkgghoAnSNA5u8BCFzFQI92cdlU5R74TDegSMCK0X77Iqu
+        idDYNTSZd1B3lqGUAqjGr6MYmUQpcpEwQTiP4tdzYHYK+Oiy6maYovZT6wt2uaWyUGsrUMrPIBcfQNp2
+        QdicIjdegZC+AD41Dj55FtyGAy2lDDpgU0m4XdH7RyVdZUh4EfIvD6T8XYi5abNlMxQfAxs7hkb4COpf
+        DpFJ86B9NqUTp6j0PUtRrCfqhfDzFp95BI5+CC41By45AzZxB2z8Nhrfp9GITaERvYZK/rOenh9hO3GK
+        Ss0M30i5DwcTs0OVqNsiDWTWIn1zWxop17C3naao3yMDixAn0/6hAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="BtnOpenTranslated.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKqSURBVDhPhZLLTxNRFMZna+Kf4caFMcaA7jRGEzcE0YAm
-        RjeamBgWkBCNmFg0iBANUKYSA0FcqIlowkJWtkqoVaEFSnkVSiml7xa1MNN5dDpzP89Mu5Dg4yRf7mTm
-        fL/zuMP9LYY+59A/nkKfM2Gp8UVAujY4J19x+EKn7njuHW9+s6+S+ufo/5QEA5AVDeRIGUFHPK8hLWjo
-        dOZQ3z77/sTNkf2V9L3BU9UfEsOXiI5v0RLc4SLGFiSIRQZPTAM/8R1n77r5SvreMNvelhlmYjpm4jom
-        NzS4VhWsZyVsiRpEtYQLNierpO8NE7CjMMwndQQSOqZjJXjWi3AGZYwGRCRonEu2j4xbHjs6t/m+VouN
-        1f2mc5qdAIICLKWZpUDSgDeqwRMpWp2kBQMXTYDvZbXKmEHropUxU+Vn+wcawQIAy2kDiykDc9SJL27u
-        Q0NGZGgwAYujVdtMV6AmuiFF7JCiw5A33+F8u5dGAFazwFqufAYJNp8EfDFY3+ptLsaFXh8RDG2HzA4U
-        wjyyrusIOar+q7xcIgB1EHpbpZXkDNKuJsRG6hF9VYOtKTvytGmDxtFporIYSjqjd8wCZIQ8Gu7Pgjo4
-        plnzGypJpkwJTBdRSAxASQ1ATg1CSg6RnqOQHIYqhizAz4KBM23jRS7kqC4yXYaadJD4iuzIrvGIB3mE
-        53kEZ3vhn3yCrxMdWF6ZsgCnW9yZulveHc43UK0amgA1ZQL6SL1Q44+hxDqgbNogR25DDjeisHoV4lIt
-        SsK0Baj8Lhzn7zmsMC1frpzoIXMXGR9A2WglczOktRsorFyGuFgDIXCSAN7dgNXuAyVtO0xX9wxy9Cnk
-        jT66EbrScBcKoYdUuQ1isJWqt0BYaIKac+8GLHUcDPg7Dyn+RyTz/JcqOaan7Oa4X1eBxIjuZJdmAAAA
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKqSURBVDhPhZLbSxRhGMbnNui/6KqLiAituyK86MbsgBZE
+        3RQE4YWCFBm0FmZKoa6zSShmEAVZIKRX7pK4baXrYV1Pq+u6rnvetVqd2Tns7Mz39M7sXiR2eOHhG2be
+        5/cevuH+FgOfs+gdT6LHGbdU/8ov3eifl685poNn7nkenGx8d6Cc+ufo/ZQAA5ARDWRJaUFHLKchJWho
+        d2ZR2zo3cur20MFy+v7gqeoPieFLWMe3SBHuUAGjixLEAoMnqoGf+I6z9918OX1/mG3vyAyzUR2zMR2T
+        mxpcawo2MhK2RQ2iWsQl2xgrp+8PE7CrMCwkdPjjOmaiRXg2CnAGZAz7RcRpnCs2F+NWRo/Pb308p0VH
+        zv+mGs1OAEEBllPMkj9hwBvR4AkXrE5SgoHLJsD7ulJlzKB10cqYqdKzfYxGsADASsrAUtLAPHUyHTP3
+        oSEtMtSZgKXhih2mK1DjnZDCdkiRQchbH3Cx1UsjAGsZYD1bOgMEW0gA01FY32ptTsYF3x4TDG2XzA7k
+        QzwyrpsIOir+q5xcJAB1EHxfoRXlNFKuBkSHahF5U43tKTtytGmDxtFpopIYijqjd8wCpIUc6h7OgTo4
+        oVnzGypJpkwJTBeRj/dBSfZBTvZDSgyQXiKfGIQqBi3Az7yBqpbxAhd0VBaYLkNNOEh8WXZk1nnEAjxC
+        CzwCc93wTT7D14k2rKxOWYCqJnf6wh3vLuftq1QNTYCaNAE9pG6osadQom1QtmyQw3chh+qRX7sOcbkG
+        RWHGApR/F47zdR1VmJYrVY53kbmDjI+gbDaTuRHS+i3kV69CXKqG4D9NAO9ewFrnoaK2E6KrewE58hzy
+        Zg/dCF1pqAP54GOq3AIx0EzVmyAsNkDNuvcCltsO+33tRxTfE5J5/kvlHNNTcnPcLyXDxHMfLebvAAAA
         AElFTkSuQmCC
 </value>
   </data>
   <data name="BtnSaveAs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKrSURBVDhPjZJZTxNRHMX7hXygy+ASv4WPxrAVugABRGTT
-        aOKDGkGi0bAJWgiUVWS3A2iqCIWKBYMphdKFpRToCnRKt+N/bpUnQpjk5GZm7vmdcxcJp+FLFRq+Qa7l
-        zSQ/px2Ocdr+FKflQf+YrhVO4UbxNK4X8cgsmAjcLOYXZZrxWxLx4dR8y7IzgmWngGg8BYEUOU0ieJLA
-        fjAGXzjO3oVYEgehOCw2b2rQ4ojfeWY85NSjuRJOa7AuOyJ41OtFJEZmmpj3Yh7+ozj2yRCOJBg4RKP7
-        8BTrnigMFj+mLYfgSvgoAaaCFgI81O+xSaJEgDcUg/84zpLFBnvUxr4XxfqugOoOF76tBqBQ61MEGI6Z
-        7ScE8LBJovLrTPDSeBRNIkqtAscJOLxiuoC1HQGVOid6jB4oVOMgQH/KtHGMB90euKiiqC3fKaUnWPqR
-        kMSOL3Zmtu5EcP/9JjpntiEvGBUBPObWCNC1y6orKb2g3oTCV4soIqkbFqCk7+K//ypvtaHd4II8f4QA
-        dEyz1jBqOrdobSQaazrdqOkQ5UKVzkWJDlS0b6K8zY6y1nWUv9tA85gdcuWnNMC4Gk6bSWkjiSCiufKD
-        k1W+10YAMt5tsZHW8GbIBlnexzRgZiVIZvc/uc7SmZmSK9rtzFxGxtImK0qa/qC+bxWy3AERYABvCaBa
-        52bnfRkVvf2N590rkOb0QXKVNnFyKcDqCnRkT7/mXCjxTmhe/8KTjiVIs3sJUMhj3OynBmmAcePLhRIB
-        qoafeNxmJoAekkxtX2pkwUcA56UbKOsWUNtiQkZWY0oiVRk2B34cYGB2/9z1nqfa5nlUNc4h47bOJ1Go
-        P79UqCfH5NmTfoVqgq7nGLth8vxhyJRDdFSDkOb204b1UuUeStWz5CtZXaGM7K7vfwGPqhDsXLZSFgAA
-        AABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKsSURBVDhPjZJZTxNRHMX7hXygy+ASv4WPxrAVugABRGTT
+        aOKDGkGicWERtBCW1iqy2wE0VYRChYLBtEDpgtAW6Ap0Spc5/meqPBHCJCc3M3PP75y7SBgNW6nQsC1y
+        LWslhRjtUJLRGnhGy4L+ibpUOokr5VO4XMYit2Q8fLWcXZBpxq5JhIdRs+3L7jiW3RwSKR4cKX6cQeQo
+        jd1IEsFYSnznkhnsRVNYcvh5o82VuvHIvM+oRwoljNZkX3bFcU8fQDxJZppY9GQOoYMUdskQi6dFcJRG
+        7/4x1n0JmGwhTNn2wVSwCQJMRmwEuNvvFycJEgCBaBKhw5SYLDTwUxunP4H1HQ713R58Ww1Doe7jCTCU
+        tDqPCOATJwkqbrIgQONBIoMEtQofpuEKCOkcHNscanVuDJh9UKjGQAADb9k4xJ0+HzxUUdBW8JjS02L6
+        AZfBdjB5YrZvx3H77SZ6pv9AXjIiAFjMOgjQuyNWV1J6SbMFpc8WUEZSt8xDSd+Ff/9V3bGGLpMH8uJh
+        AtAxzdhjaOjZorWRaGzo8aKhW5AHdToPJbpQ07WJ6k4nqjrWUf1mA22jTsiVn7IA82osayZljSSCCOba
+        d26x8q1OApDxZvsayYEXg2uQFX3MAqZXImT2/pPnJF00U3JNl1M0V5GxstWOitbfaDasQlZoFAAmsLYw
+        6nVe8bzPo7KXv/C4bwXSAgMkF2kTJxbDYl2Ojuzh14IzJdwJzfMlPOhehDRfT4BSFmPWEDXIAswbX86U
+        AFC1/MT9TisB+iHJ1er54fkgAdznbqBsmkdjuwU5ea94iVRl2jT+2INxZvfU9Z6mxrY51L2eRc51XVCi
+        UH9+qlBPjMrzJ0IK1Thdz1HxhsmLhyBTDtJRfYC08D1tmJ4qD1Bqv5h8Ia83mpPf+/0vdhwQ4vOl0qwA
+        AAAASUVORK5CYII=
 </value>
   </data>
   <data name="BtnSearch.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHzSURBVDhPrZHPa9NgGMeLQq8evMguAy/D4V8gXjz5FxTE
-        yxBEPejBQyfuEpCxMVHGKBimVmU6KNF2O6w6t2VkP9us6ZyOZT9q0jWpa127oqRpkkH4+qZ7PUg72WAf
-        yOF9n+fzfd6H+E4MAKemMzY7ITv6uFR2x8Rdd0T6rXNLFZYhNdrWHE+eythCWnOglvehVRxoew62ftrg
-        137htVAQGOY/ITyZLGk29Mo+5IKFZa2GVK6GFb0GZddB/EsZAx8VlrY38lm2dLXk1GWJiEvbJpKqiQXF
-        PAjSTDwZzei0vRFv3xx5sieLWRMJIs9/r2I2U4WwVSXBNnq4tEvbG4nN77jZsoMkkRfJ1DkizxBxetMA
-        v25gdcdGcFg8PCAyV9TX6fP/TuU3DEwS2TuLqoGu5+kCbW9kaLbAflrZw2bRru9el+UD+VveQngyi/7+
-        kMU/utpGlX/xftGz8W0hJhaRzplY/WHhK/mSioGXE1kMRBJYi/Ug/vBKaTR46fCQxx822O6IrHv73n+z
-        6Ha+SOV7Q69UaSiIYuo9lt91InL3YuntnbbmIc3gmIB/5MHl6AJ7E/mZMBKDtxDuaC3R8tHgmHb/8L0L
-        0amnASjxPrAd50BLR4cLtPsHb7REw7fPI3T9TC+9Ph5cwHc6dO1sCz2eBD7fH9PMc0CS/prmAAAAAElF
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHzSURBVDhPrZHPa9NgGMeLQq8evMgugpfh8C8QL578Cwri
+        ZQiiHhQ8uIleAiIbijJmwTC1KtNBibbbwerclpGt1qZrOqdj2Y+adE0625muKGmaZBC+vuleD9JOJuwD
+        Obzv83y+z/uQwL4B4MB03mEnZFcfzxreW3HTG5V+6dxcjWVIjba1x5en8o6Q01yo1W1oNRfalou1TQf8
+        0k88F8oCw/wjhCeTJc2BXtuGXLYxrzWQLTawoDeg/HCR+FzF4DuFpe2tfJBtXTXcpiwRcW7dgqhaSCnW
+        TpBm4f5YXqftrfj7FsmTfTlTsJAm8sdvdczm6xDW6iTYQR8nebS9lXhywytUXYhE/kSmJok8Q8TpVRP8
+        sonF7w6uj4i7B0STFX2ZPv/PVH7FxCSR/XNGNXHrca5M21sZni2z7xe2sFpxmrs3ZXlH/lqyEZksYGDg
+        oc3fPtNJlb/xf9Gj8XUhnqkgV7SwuGHjC/lExcTTiQIGo2ksxfuQuHnaGOs5uXvIvTcr7J2orPv7XnuR
+        8nqfZEv94WeqNNyDSvY15l/1InrlhPHycmf7kHZwTCg4euNULMVeQGkmgvTQRUS6jxq0vDc4pis4cvV4
+        bOpBCEriLtjuI6ClvcOFuoJD5ztikUvHED53qJ9e/x9cKHAwfPZwBz3uB4HAb6ttczCdvjI9AAAAAElF
         TkSuQmCC
 </value>
   </data>
@@ -223,19 +223,19 @@
   <data name="LblAbout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKrSURBVDhPrZPtT5JRGMafv0X/gJqd50t9KD+USy1Qln2w
-        rLBMzVq6itJBlu/k2yOK6BQMokzUTChJyRdeJCUUFPPlyYmZtLXVF8lallcHojE319bWtf2+3dd9n+vc
-        5zD/XULVUuwxpU+ayHn4w/KJjXjKIfkEf1DulO6X22MjZbtLoJwXHeW8gdwODzpG/Oh1rIXRWFYgbn4F
-        VmoJEOmQKFK+U8nKWVFCzWSwun8RZncA7YN+lBnmcffxG3DGRRisqyjv9YHN7gmSK/07myQpZ2ISaqfW
-        Q2bjZABSarql96LT/g6dtlXc0HogeeCF9uUyyro9YLMM6+Rcd0zEzjBHuClZdpsbJtcHFOp9kNAI19TT
-        +PJtK0y+2oX8dhck993Qj64gXf4CJF0ni9gZJr52gtdY/FAYeVzvmEaB2o38Nhd0I8vQUi61OH6jstNY
-        XjQPLoBNU/MRO8McKB7d7Jt4j0Kdh056jbxWJy12IKRtSo7ShuzGMYoVl1U2GBwr2HO8aTNiZ5i9ssHN
-        J861cNbQpNxmOzXZ4fN/RvDrFrLqR3ChbhjnKTkNw+gapw2SGqIN2KIhvs3Co6pnDnkqJ3KabLioGMPs
-        yifa4Dsy7w0hk+YWy8242e6AwjwDNqU+GoFIzLIMbgSdVj/ylA7kcFaYXav48XM7HMHz9iMyykwUI1qe
-        +ZBW1AsirIteIrnaHRNazZ2uaWgtS8jihiGuHsSZqgFklBpxuuQpTpX0oabLTdc7Ts2l6yS1IrrGkIhY
-        L9qX0hqUPnJBM7QASZuNHvk5zpabUKAcRrPRC4nOAVZwO0gE8t1fI0nTiMiJxsDJ4n4oBubw0MZTllBv
-        mkFqoQEkuTxABBW7m/8o7qQqNk7UKCUpHE+S5BsksXKDFVbxrKBSGics+ftn+ncxzC+mW9BCESVNBwAA
-        AABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKqSURBVDhPrZPfT5JRGMffv0Xva7Pz3tRFeVEu0qGy9MKy
+        wjIxa+kqSvdi5W/yF6KADcUgy0TNhBKFJAU0IhQU88ebAzNpa6sbyVqW3w5Gc26ura3v9rl7vs9zvuc5
+        h/nvStUsxqeoApxA4eMPy91riZRDcjd/UD7B7Zc742Nlu0uomhMdVfjD+R0+dNhD6HOtbKGzBSFWvwTL
+        2cKEs4pi5TuVrJoRJdW5I7UDC7B4w2gbDqHCOIfbj95AYVqAcWwZlX0BsHm9EXJpYGeTY6rpuKT6ydWo
+        2fQqDI6abnT60eV8hy7HMq7pfZDe90P/fAkVPT6wucZVcqYnLmZnmCOKSVme1guz5wOKOwOQ0ghX2qfw
+        5dvGFoXtHhS2eSC950XniyCy5EMgWQZZzM4wifVuXmcLQWnicbVjCkXtXhRqPTDYl6CnXGh1/UbjpLH8
+        UA/Pg81o52N2hjlQal/vd79HscFHJ71Gwd0JWuxCVJsUicqBvOZRyhguahwwuoLYk9KyHrMzzF7Z0Prj
+        iZWtrNFJ+WonNTkRCH1G5OsGchvtONcwgrMUSdMIusdpA0HTdgO2xMprbTxqemdRoJmApMWB88pRzAQ/
+        0QbfkXPHihyaWyy34HqbC0rLNNi0xu0IRGqRZSvs6BoLoUDlgkQxBotnGT9+bm5F8L39iOwKM8WE1qcB
+        ZJT0gaQ2bF8iudwTF13Nre4p6G2LyFWMQFw7jFM1g8guN+Fk2ROcKOtHXbeXrnecmstXSXrV9hqjIuJO
+        0b601gj30AOddR5SrYMe+RlOV5pRpBqB2uSH1OACKyyNEKF899dIMnQiclwZzrw5AOXgLB44eMoiGs3T
+        SC82giRXhomwanfzHyVkauITRM0cSVPwRCBfI4LqNTa1hmeF1VxCatnfP9O/i2F+AZDP0DaY6mqhAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <metadata name="OfdOpen.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
